updated gallery layout

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -272,13 +272,13 @@ p {
 }
 
 h1 {
-color: black;
-font-weight: 600;
-line-height: 1.5;
-margin: 0 0 1rem 0;
-/* text-transform: uppercase; */
+  color: black;
+  font-weight: 600;
+  line-height: 1.5;
+  margin: 0 0 1rem 0;
+  /* text-transform: uppercase; */
   /* letter-spacing: 0.2rem; */
-font-family: Belleza;
+  font-family: Belleza;
 }
 
 h2,
@@ -340,7 +340,7 @@ h3 {
 
 h4 {
   font-size: 0.8rem;
-  color:#cc0000;
+  color: #cc0000;
 }
 
 h5 {
@@ -1508,7 +1508,6 @@ body.is-preload #bg:before {
   /* border: solid 1px black; */
   border: solid 1px #ffffff;
   border-radius: 4px;
-  fon
 }
 
 #header nav ul li {
@@ -1829,135 +1828,8 @@ body.is-preload #footer {
   opacity: 0;
 }
 
-.row > .column {
-  padding: 0 8px;
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Create four equal columns that floats next to eachother */
-.column {
-  float: left;
-  width: 25%;
-}
-
-/* The Modal (background) */
-.modal {
-  display: none;
-  position: fixed;
-  /* z-index: 1; */
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: black;
-}
-
-/* Modal Content */
-.modal-content {
-  position: relative;
-  background-color: black;
-  /* background-color: #fefefe; */
-  margin: auto;
-  padding: 0;
-  width: 90%;
-  max-width: 1200px;
-}
-
-/* The Close Button */
-.close {
-  color: black;
-  position: absolute;
-  top: 10px;
-  right: 25px;
-  font-size: 35px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #999;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-/* Hide the slides by default */
-.mySlides {
-  display: none;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: black;
-  /* color: white; */
-  font-weight: bold;
-  font-size: 20px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  -webkit-user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* Caption text */
-.caption-container {
-  text-align: center;
-  background-color: black;
-  padding: 2px 16px;
-  color: white;
-}
-
-img.demo {
-  opacity: 0.6;
-}
-
-.active,
-.demo:hover {
-  opacity: 1;
-}
-
-img.hover-shadow {
-  transition: 0.3s;
-}
-
-.hover-shadow:hover {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.grid {
+/* Web-Dev Simplified */
+/* .grid {
   display: grid;
   grid-template-columns: repeat(3, 200px);
   justify-content: center;
@@ -1994,4 +1866,50 @@ img.hover-shadow {
   padding: 4px;
   background-color: white;
   border: 2px solid white;
+}  */
+
+/* Traversy */
+.container {
+  max-width: 480px;
+  margin: auto;
+  border: #fff solid 3px;
+  background: #fff;
+}
+
+.main-img img,
+.imgs img {
+  width: 100%;
+}
+
+.imgs {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: center;
+  align-content: center;
+  grid-gap: 10px;
+}
+
+.imgs img {
+  cursor: pointer;
+  width: 200px !important;
+  height: 200px !important;
+}
+
+/* Fade in animation */
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-in {
+  opacity: 0;
+  animation: fadeIn var(--fade-time) ease-in 1 forwards;
+}
+
+/* Media Queries */
+@media (max-width: 600px) {
+  .imgs {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
