added more pics

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1872,8 +1872,8 @@ body.is-preload #footer {
 .container {
   max-width: 480px;
   margin: auto;
-  border: #fff solid 3px;
-  background: #fff;
+  /* border: #fff solid 3px; */
+  /* background: #fff; */
 }
 
 .main-img img,
