--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -268,10 +268,6 @@ h6 {
   letter-spacing: 0.2rem;
 }
 
-#contact {
-  text-transform: none;
-}
-
 h1 a,
 h2 a,
 h3 a,
@@ -288,15 +284,15 @@ h3.major,
 h4.major,
 h5.major,
 h6.major {
-  border-bottom: solid 1px #6b6b6b;
-  /* border-bottom: solid 1px #ffffff; */
+  border-bottom: solid 1px #525252;
   width: -moz-max-content;
   width: -webkit-max-content;
   width: -ms-max-content;
   width: max-content;
   padding-bottom: 0.5rem;
   margin: 0 0 2rem 0;
-  color: #6b6b6b;
+  /* color: #6b6b6b; */
+  color: #525252;
 }
 
 h1 {
@@ -308,7 +304,6 @@ h1 {
   font-weight: 700;
   line-height: 1.5;
   margin: 0 0 1rem 0;
-  /* text-transform: uppercase; */
   letter-spacing: 0.2rem;
 }
 
@@ -413,7 +408,7 @@ hr {
 
 /* Form */
 
-form {
+/* form {
   margin: 0 0 2rem 0;
 }
 
@@ -481,9 +476,9 @@ form > .fields > .field.quarter {
   form > .fields > .field.quarter {
     width: calc(100% - 1.5rem);
   }
-}
+} */
 
-label {
+/* label {
   color: #ffffff;
   display: block;
   font-size: 0.8rem;
@@ -492,7 +487,7 @@ label {
   line-height: 1.5;
   margin: 0 0 1rem 0;
   text-transform: uppercase;
-}
+} */
 
 /* input[type="text"],
 input[type="password"],
@@ -669,7 +664,7 @@ input[type="radio"] + label:before {
   border-radius: 100%; 
 }*/
 
-::-webkit-input-placeholder {
+/* ::-webkit-input-placeholder {
   color: rgba(255, 255, 255, 0.5) !important;
   opacity: 1;
 }
@@ -692,11 +687,11 @@ input[type="radio"] + label:before {
 .formerize-placeholder {
   color: rgba(255, 255, 255, 0.5) !important;
   opacity: 1;
-}
+} */
 
 /* Box */
 
-.box {
+/* .box {
   border-radius: 4px;
   border: solid 1px #ffffff;
   margin-bottom: 2rem;
@@ -713,11 +708,11 @@ input[type="radio"] + label:before {
   border: 0;
   border-radius: 0;
   padding: 0;
-}
+} */
 
 /* Icon */
 
-.icon {
+/* .icon {
   text-decoration: none;
   border-bottom: none;
   position: relative;
@@ -751,7 +746,7 @@ input[type="radio"] + label:before {
 .icon.brands:before {
   font-family: "Font Awesome 5 Brands";
 }
-
+ */
 /* Image */
 
 .image {
@@ -837,7 +832,7 @@ input[type="radio"] + label:before {
 
 /* List */
 
-ol {
+/* ol {
   list-style: decimal;
   margin: 0 0 2rem 0;
   padding-left: 1.25em;
@@ -845,12 +840,16 @@ ol {
 
 ol li {
   padding-left: 0.25em;
-}
+} */
 
 ul {
   list-style: disc;
   margin: 0 0 2rem 0;
   padding-left: 1em;
+}
+
+#contact {
+  color: #454545;
 }
 
 ul li {
@@ -872,7 +871,7 @@ ul.alt li:first-child {
   padding-top: 0;
 }
 
-dl {
+/* dl {
   margin: 0 0 2rem 0;
 }
 
@@ -884,7 +883,7 @@ dl dt {
 
 dl dd {
   margin-left: 2rem;
-}
+} */
 
 /* Actions */
 
@@ -1678,7 +1677,7 @@ body.is-preload #header .content .inner {
   padding: 4rem 2rem 3rem 2rem;
   position: relative;
   /* width: 40rem; */
-  max-width: 100%;
+  max-width: 80%;
   background-color: #f7f7f7;
   color: #6b6b6b;
 
