--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -749,7 +749,7 @@ input[type="radio"] + label:before {
  */
 /* Image */
 
-.image {
+/* .image {
   border-radius: 4px;
   border: 0;
   display: inline-block;
@@ -758,7 +758,7 @@ input[type="radio"] + label:before {
 
 .image:before {
   pointer-events: none;
-  background-image: url("../../images/overlay.png");
+  background-image: url("../../img/overlay.png");
   background-color: rgba(19, 21, 25, 0.5);
   border-radius: 4px;
   content: "";
@@ -828,7 +828,7 @@ input[type="radio"] + label:before {
   .image.main {
     margin: 1.5rem 0;
   }
-}
+} */
 
 /* List */
 
@@ -1258,8 +1258,6 @@ button {
     rgba(19, 21, 25, 0.5),
     rgba(19, 21, 25, 0.5)
   );
-  /* url("../../images/whiteoverlay.png") */
-  /* url("../../images/overlay.png"); */
   background-size: auto, 256px 256px;
   background-position: center, center;
   background-repeat: no-repeat, repeat;
@@ -1797,54 +1795,83 @@ body.is-preload #footer {
   padding: 0 8px;
 }
 
-/* Gallery (Traversy)  */
-/* .container {
-  max-width: 100%;
-  margin: auto;
-  border: #fff solid 3px;
-  background: #fff;
-}
-
-.main-img img,
-.imgs img {
-  width: 100%;
-}
-
-.imgs {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  justify-content: center;
-  align-content: center;
-  grid-gap: 10px;
-}
-
-.imgs img {
-  cursor: pointer;
-  /* width: 150px !important; */
-/* height: 150px !important; */
-/* } */
-
-/* Fade in animation */
-/* @keyframes fadeIn {
-  to {
-    opacity: 1;
-  }
-}
-
-.fade-in {
-  opacity: 0;
-  animation: fadeIn var(--fade-time) ease-in 1 forwards;
-}
-
-/* Media Queries */
-/* @media (max-width: 600px) {
-  .imgs {
-    grid-template-columns: repeat(2, 1fr);
-  }
-} */
-
 /* Lightbox */
 * {
+  margin: 0;
+  padding: 0;
+  font-family: "montserrat", sans-serif;
+  box-sizing: border-box;
+}
+
+.gallery-section {
+  width: 100%;
+  /* padding: 60px 0; */
+  /* background: #f1f1f1; */
+}
+
+.inner-width {
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+  padding: 0 20px;
+}
+
+.gallery-section h1 {
+  text-align: center;
+  text-transform: uppercase;
+  color: #333;
+}
+
+/* .border {
+  width: 180px;
+  height: 4px;
+  background: #333;
+  margin: 60px auto;
+} */
+
+.gallery-section .gallery {
+  display: flex;
+  flex-wrap: wrap;
+  /* flex-wrap: wrap-reverse; */
+  justify-content: center;
+}
+
+.gallery-section .image {
+  flex: 25%;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.gallery-section .image img {
+  width: 100%;
+  height: 100%;
+  transition: 0.4s;
+  padding: 2px;
+}
+
+.gallery-section .image:hover img {
+  transform: scale(1.4) rotate(15deg);
+}
+
+@media screen and (max-width: 960px) {
+  .gallery-section .image {
+    flex: 33.33%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .gallery-section .image {
+    flex: 50%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .gallery-section .image {
+    flex: 100%;
+  }
+}
+
+/* * {
   margin-top: 10px;
   margin: 5px;
   padding: 0;
@@ -1855,7 +1882,6 @@ body.is-preload #footer {
 .gallery-section {
   width: 100%;
   padding: 60px 0;
-  /* background: #f1f1f1; */
 }
 
 .gallery-container {
@@ -1879,21 +1905,21 @@ body.is-preload #footer {
   flex: 25%;
   overflow: hidden;
   cursor: pointer;
-}
+} */
 
-.gallery-section .image img {
+/* .gallery-section .image img {
   width: 100%;
   /* height: 100%; */
-  height: 150px !important;
-  transition: 0.4s;
-}
+/* height: 150px !important;
+  transition: 0.4s; */
+/* } */
 
-.gallery-section .image:hover img {
+/* .gallery-section .image:hover img {
   transform: scale(1.4) rotate(15deg);
-}
+} */
 
 /* Media Queries */
-@media (max-width: 600px) {
+/* @media (max-width: 600px) {
   .img {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -1901,21 +1927,24 @@ body.is-preload #footer {
 
 @media screen and (max-width: 960px) {
   .gallery-section .image {
+    grid-template-columns: repeat(4, 1fr);
     flex: 33.33%;
   }
 }
 
 @media screen and (max-width: 768px) {
   .gallery-section .image {
+    grid-template-columns: repeat(3, 1fr);
     flex: 50%;
   }
 }
 
 @media screen and (max-width: 480px) {
   .gallery-section .image {
+    grid-template-columns: repeat(1, 1fr);
     flex: 100%;
-  }
-}
+  } 
+/* } */
 
 .partners {
   background-color: white;
