--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -879,15 +879,10 @@ body.is-preload #footer {
 }
 
 /* Lightbox */
-* {
-  margin: 0;
-  padding: 0;
-  font-family: "montserrat", sans-serif;
-  box-sizing: border-box;
-}
-
 .gallery-section {
   width: 100%;
+  padding: 60px 0;
+  background: #f7f7f7;
 }
 
 .inner-width {
@@ -895,12 +890,6 @@ body.is-preload #footer {
   max-width: 1200px;
   margin: auto;
   padding: 0 20px;
-}
-
-.gallery-section h1 {
-  text-align: center;
-  text-transform: uppercase;
-  color: #333;
 }
 
 .gallery-section .gallery {
@@ -919,7 +908,7 @@ body.is-preload #footer {
   width: 100%;
   height: 100%;
   transition: 0.4s;
-  padding: 2px;
+  padding: 6px;
 }
 
 .gallery-section .image:hover img {
@@ -944,29 +933,7 @@ body.is-preload #footer {
   }
 }
 
-.gallery-container {
-  width: 100%;
-  max-width: 1200px;
-  margin: auto;
-  padding: 10px 5px 10px 5px;
-}
-
-.gallery-section .gallery {
-  display: flex;
-  flex-wrap: wrap-reverse;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  justify-content: center;
-  align-content: center;
-  grid-gap: 10px;
-}
-
-.gallery-section .image {
-  flex: 25%;
-  overflow: hidden;
-  cursor: pointer;
-}
-
+/* Logos on services page */
 .partners {
   background-color: white;
   padding: 12px;
